Реализованы тесты для добавления и удаления проектов в Mantis 2.0

--- a/data/project.json
+++ b/data/project.json
@@ -1,7 +1,7 @@
 [
   {
     "py/object": "model.project.Project",
-    "name": "New_problem",
+    "name": "nameR",
     "status": "development",
     "view_state": "private",
     "description": "description",
